src/Simulation/Simulators/SparseSimulator/Native/capi.hpp

    MICROSOFT_QUANTUM_DECL simulator_id_type init_cpp(logical_qubit_id num_qubits);
    MICROSOFT_QUANTUM_DECL void destroy_cpp(simulator_id_type sim_id);
    MICROSOFT_QUANTUM_DECL void seed_cpp(simulator_id_type sim_id, _In_ unsigned int s);
    // allocate and release
    MICROSOFT_QUANTUM_DECL void allocateQubit_cpp(simulator_id_type sim_id, logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void releaseQubit_cpp(simulator_id_type sim_id, logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL logical_qubit_id num_qubits_cpp(simulator_id_type sim_id);
    // single-qubit gates
    MICROSOFT_QUANTUM_DECL void X_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void Y_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void Z_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void H_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void S_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void T_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void AdjS_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void AdjT_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void MCX_cpp(simulator_id_type sim_id, _In_ int n, _In_reads_(n) logical_qubit_id* c, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void MCY_cpp(simulator_id_type sim_id, _In_ int n, _In_reads_(n) logical_qubit_id* c, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void MCZ_cpp(simulator_id_type sim_id, _In_ int n, _In_reads_(n) logical_qubit_id* c, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL void MCH_cpp(simulator_id_type sim_id, _In_ int n, _In_reads_(n) logical_qubit_id* c, _In_ logical_qubit_id q);
    // rotations
    MICROSOFT_QUANTUM_DECL void R_cpp(simulator_id_type sim_id, _In_ int b, _In_ double phi, _In_ logical_qubit_id q);
 

   // multi-controlled rotations
    MICROSOFT_QUANTUM_DECL void MCR_cpp(
        simulator_id_type sim_id,
        _In_ int b,
        _In_ double phi,
        _In_ logical_qubit_id n,
        _In_reads_(n) logical_qubit_id* c,
        _In_ logical_qubit_id q);
    // Exponential of Pauli operators
    MICROSOFT_QUANTUM_DECL void Exp_cpp(
        simulator_id_type sim_id,
        _In_ int n,
        _In_reads_(n) int* b,
        _In_ double phi,
        _In_reads_(n) logical_qubit_id* q);
    MICROSOFT_QUANTUM_DECL void MCExp_cpp(
        simulator_id_type sim_id,
        _In_ int nc,
        _In_ int n,
        _In_reads_(nc) logical_qubit_id* c,
        _In_reads_(n) int* b,
        _In_ double phi,
        _In_reads_(n) logical_qubit_id* q);
    // measurements
    MICROSOFT_QUANTUM_DECL bool M_cpp(simulator_id_type sim_id, _In_ logical_qubit_id q);
    MICROSOFT_QUANTUM_DECL bool Measure_cpp(
        simulator_id_type sim_id,
        _In_ int n,
        _In_reads_(n) int* b,
        _In_reads_(n) logical_qubit_id* q);
   
    MICROSOFT_QUANTUM_DECL double JointEnsembleProbability_cpp(
        simulator_id_type sim_id,
        _In_ int n,
        _In_reads_(n) int* b,
        _In_reads_(n) logical_qubit_id* q);
    MICROSOFT_QUANTUM_DECL void Dump_cpp(simulator_id_type sim_id, _In_ logical_qubit_id max_qubit_id, _In_ void (*callback)(char*, double, double));
    MICROSOFT_QUANTUM_DECL bool DumpQubits_cpp(
        simulator_id_type sim_id,
        _In_ logical_qubit_id n,
        _In_reads_(n) logical_qubit_id* q,
        _In_ void (*callback)(char* , double, double));
    MICROSOFT_QUANTUM_DECL void QubitIds_cpp(simulator_id_type sim_id, void (*callback)(logical_qubit_id));