src/Simulation/Simulators/SparseSimulator/Native/gates.h

            // Used to track differnet kind of gates,
            // mainly for timing summary data
             enum OP {
                MCPhase,
                Phase,
                T,
                AdjT,
                S,
                AdjS,
                H,
                MCH,
                X,
                MCX,
                Y,
                MCY,
                Z,
                MCZ,
                M,
                Measure,
                Exp,
                MCExp,
                R1,
                MCR1,
                Rx,
                Rz,
                Ry,
                MCRx,
                MCRz,
                MCRy,
                SWAP,
                MCSWAP,
                Assert,
                PermuteSmall,
                PermuteLarge,
                Proj,
                MCProj,
                Allocate,
                Release,
                NUM_OPS // counts gate types; do not add gates after this!
            };